--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body class="root">
     <header class="header">
-        <img class="header__logo" src="./images/logo.svg" alt="Mesto">
+        <img class="header__logo" src="./images/logo.svg" alt="Логотип Место">
     </header>
 
     <main class="page">
