--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./pages/index.css">
-  <title>Mesto</title>
+  <title>Место</title>
 </head>
 
 <body class="root">
@@ -30,42 +30,42 @@
                     <img class="elements__image" src="./images/karachaevsk.jpg" alt="Карачаевск">
                     <div class="elements__container">
                         <h2 class="elements__title">Карачаевск</h2>
-                        <button class="elements__like elements__like_active" type="button" aria-label="like"></button>
+                        <button class="elements__like" type="button" aria-label="лайк"></button>
                     </div>
                 </li>
                 <li class="elements__item">
                     <img class="elements__image" src="./images/elbrus.jpg" alt="Гора Эльбрус">
                     <div class="elements__container">
                         <h2 class="elements__title">Гора Эльбрус</h2>
-                        <button class="elements__like elements__like_active" type="button" aria-label="like"></button>
+                        <button class="elements__like" type="button" aria-label="лайк"></button>
                     </div>
                 </li>
                 <li class="elements__item">
                     <img class="elements__image" src="./images/dombay.jpg" alt="Домбай">
                     <div class="elements__container">
                         <h2 class="elements__title">Домбай</h2>
-                        <button class="elements__like elements__like_active" type="button" aria-label="like"></button>
+                        <button class="elements__like" type="button" aria-label="лайк"></button>
                     </div>
                 </li>
                 <li class="elements__item">
                     <img class="elements__image" src="./images/elbrus.jpg" alt="Гора Эльбрус">
                     <div class="elements__container">
                         <h2 class="elements__title">Гора Эльбрус</h2>
-                        <button class="elements__like elements__like_active" type="button" aria-label="like"></button>
+                        <button class="elements__like" type="button" aria-label="лайк"></button>
                     </div>
                 </li>
                 <li class="elements__item">
                     <img class="elements__image" src="./images/dombay.jpg" alt="Домбай">
                     <div class="elements__container">
                         <h2 class="elements__title">Домбай</h2>
-                        <button class="elements__like elements__like_active" type="button" aria-label="like"></button>
+                        <button class="elements__like" type="button" aria-label="лайк"></button>
                     </div>
                 </li>
                 <li class="elements__item">
                     <img class="elements__image" src="./images/karachaevsk.jpg" alt="Карачаево-Черкессия">
                     <div class="elements__container">
                         <h2 class="elements__title">Карачаево-Черкессия</h2>
-                        <button class="elements__like elements__like_active" type="button" aria-label="like"></button>
+                        <button class="elements__like" type="button" aria-label="лайк"></button>
                     </div>
                 </li>
             </ul>
@@ -78,7 +78,7 @@
 
     <div class="popup">
         <div class="popup__container">
-            <button class="popup__close" type="button" aria-label="close"></button>
+            <button class="popup__close" type="button" aria-label="закрыть"></button>
             <h2 class="popup__title">Редактировать профиль</h2>
             <form class="popup__form" name="popupform">
                 <input class="popup__input" type="text" name="username" placeholder="Имя">
